fix layout bugs

--- a/src/app/components/cart/cart-list/cart-list.component.scss
+++ b/src/app/components/cart/cart-list/cart-list.component.scss
@@ -6,7 +6,7 @@
     grid-template-columns: 2fr 4fr 1fr;
     gap: 20px;
     align-items: center;
-    height: 50%;
+    height: 10vh;
   
     img {
       width: 100%;
