--- a/src/app/components/cart/cart-page/cart-page.component.scss
+++ b/src/app/components/cart/cart-page/cart-page.component.scss
@@ -2,6 +2,7 @@
 .cartPage {
   min-height: 80vh;
   padding-top: 150px;
+  padding-bottom: 50px;
 
   &__back {
     all: unset;
