--- a/src/app/components/cart/cart-sidebar/cart-sidebar.component.scss
+++ b/src/app/components/cart/cart-sidebar/cart-sidebar.component.scss
@@ -25,10 +25,10 @@
   }
 
   &__full {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    position: relative;
+    min-height: 100%;
+    display: block;
+    overflow-y: scroll;
   }
 
   &__empty {    
@@ -48,10 +48,14 @@
     display: grid;
     grid-template-columns: 1fr;
     gap: 20px;
+    height: auto;
   }
 
 
   &__info {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
     a {
       all: unset;
     }
